k8s-on-premise-cloud/argo-rollouts/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
spec:
  host: istio-rollout
  subsets:
  - name: canary   
    labels:        
      app: istio-rollout
  - name: stable   
    labels:       
      app: istio-rollout
