k8s-on-premise-cloud/argo-rollouts/istio/virtualservice-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
  namespace: rollouts-demo-istio
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - kiali-argo.nhatanhmovieweb.shop
  http:
  - name: primary
    route:
    - destination:
        host: istio-rollout
        subset: stable
      weight: 100
    - destination:
        host: istio-rollout
        subset: canary
      weight: 0
